# ChangeLog for sys-apps/yaboot
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/sys-apps/cvs-repo/gentoo-x86/sys-apps/yaboot/Attic/ChangeLog,v 1.15 2003/03/15 23:25:42 gerk Exp $

*yaboot-1.3.10-r1 (15 Mar 2003)

  15 Mar 2003; Mark Guertin <gerk@gentoo.org> yaboot-1.3.10-r1.ebuild,
  files/yabootconfig-1.3.10.patch:
  fixed typo in yabootconfig which caused invalid macosx= in yaboot.conf, rev
  bumped to ensure people update

*yaboot-1.3.10 (26 Feb 2003)

  10 Mar 2003; Seemant Kulleen <seemant@gentoo.org> yaboot-1.3.10.ebuild:
  use epatch instead

  26 Feb 2003; Mark Guertin <gerk@gentoo.org> yaboot-1.3.10.ebuild files/digest-yaboot-1.3.10 files/yabootconfig-1.3.10.patch :
  New yaboot version, fixes up ofpath issues upstream, also has support for
  latest powermac machines. Important fixes, set as ppc

*yaboot-1.3.9.ebuild (Feb 12 2003)

  12 Feb 2003; Pieter Van den Abeele <pvdabeel@gentoo.org> yaboot-1.3.9.ebuild
  new release with newest powerbook support

*yaboot-1.3.8-r1.ebuild (Dec 20 2002)

  06 Jan 2003; Seemant Kulleen <seemant@gentoo.org> *.ebuild :

  PROVIDE=virtual/bootloader

  20 Dec 2002; Mark Guertin <gerk@gentoo.org> yaboot-1.3.8-r1.ebuild:
  Added a patched yabootconfig that detects and adds dual boot configs
  for OS X and Mac OS.  Added -alpha to keywords and promoted this
  to stable.

*yaboot-1.3.8 (12-11-02)

  11 Dec 2002; Calum Selkirk <cselkirk@gentoo.org> yaboot-1.3.8.ebuild
  files/digest-yaboot-1.3.8 :

  New ebuild. This release adds support for the PMac Windtunnel and Xserve.
  
  06 Dec 2002; Rodney Rees <manson@gentoo.org> : changed sparc ~sparc keywords
 
*yaboot-1.3.7 (Nov 16 2002); cselkirk <cselkirk@gentoo.org>

    16 Nov 2002; Calum Selkirk <cselkirk@gentoo.org> yaboot-1.3.7.ebuild
    digest-yaboot-1.3.7 :
    
    new ebuild. This mainly an upstream maintaince release with some small