@@ -1,0 +1,38 @@
+# Copyright 1999-2003 Gentoo Technologies, Inc.
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /usr/local/ssd/gentoo-x86/output/sys-apps/cvs-repo/gentoo-x86/sys-apps/yaboot/Attic/yaboot-1.3.10-r2.ebuild,v 1.1 2003/03/27 00:49:09 zwelch Exp $
+
+inherit eutils
+
+S=${WORKDIR}/${P}
+DESCRIPTION="PPC Bootloader"
+SRC_URI="http://penguinppc.org/projects/yaboot/${P}.tar.gz"
+HOMEPAGE="http://penguinppc.org/projects/yaboot/"
+
+SLOT="0"
+LICENSE="GPL-2"
+KEYWORDS="ppc -x86 -sparc -alpha"
+
+DEPEND="sys-apps/powerpc-utils 
+	sys-apps/hfsutils
+	sys-apps/hfsplusutils"
+
+PROVIDE="virtual/bootloader"
+
+MAKEOPTS='PREFIX=/usr MANDIR=share/man'
+
+src_compile() {
+	export -n CFLAGS
+	export -n CXXFLAGS
+	# dual boot patch
+	epatch ${FILESDIR}/yabootconfig-${PV}.patch
+	emake ${MAKEOPTS} CC="${CC}" || die
+}
+
+src_install() {
+	cp etc/yaboot.conf etc/yaboot.conf.bak
+	sed -e 's/\/local//' etc/yaboot.conf >| etc/yaboot.conf.edit
+	mv -f etc/yaboot.conf.edit etc/yaboot.conf
+	make ROOT=${D} ${MAKEOPTS} install || die
+}
+
