@@ -1,6 +1,11 @@
 # ChangeLog for sys-apps/yaboot
 # Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sys-apps/cvs-repo/gentoo-x86/sys-apps/yaboot/Attic/ChangeLog,v 1.15 2003/03/15 23:25:42 gerk Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sys-apps/cvs-repo/gentoo-x86/sys-apps/yaboot/Attic/ChangeLog,v 1.16 2003/03/27 00:49:09 zwelch Exp $
+
+*yaboot-1.3.10-r2 (26 Mar 2003)
+
+  26 Mar 2003; Zach Welch <zwelch@gentoo.org> yaboot-1.3.10-r2.ebuild:
+  fix ebuild to respect CC for distcc builds (bug 18243)
 
 *yaboot-1.3.10-r1 (15 Mar 2003)
 
